@@ -54,6 +54,7 @@ class Route(object):
         # Don't bother forming stuff we don't need if its a static route
         self.static = kargs.get('_static', False)
         self.filter = kargs.pop('_filter', None)
+        self.absolute = kargs.pop('_absolute', False)
         
         # Pull out route conditions
         self.conditions = kargs.pop('conditions', None)
@@ -783,7 +784,8 @@ class Mapper(object):
             if path:
                 if self.prefix:
                     path = self.prefix + path
-                if self.environ and self.environ.get('SCRIPT_NAME', '') != '':
+                if self.environ and self.environ.get('SCRIPT_NAME', '') != '' \
+                    and not route.absolute:
                     path = self.environ['SCRIPT_NAME'] + path
                 if self.urlcache is not None:
                     self.urlcache[str(kargs)] = path
